--- a/main/.env
+++ b/main/.env
@@ -3,4 +3,4 @@ MAX_CHAT_IDS= # ID чатов МАХ, откуда парсить сообщен
 TG_BOT_TOKEN= # Токен бота Telegram
 TG_CHAT_ID= # ID чатов Telegram, куда отправляются сообщения бота (пересылка). Для отправки в лс - указать свой ID
 TG_ADMIN_ID= # ID админа, дает доступ к большему кол-ву команд
-TG_TARGET_CHAT_IDS= # Айди чатов, в какие отправлять сообщения-объявления
+TG_TARGET_CHAT_IDS= # ID атов, в какие отправлять сообщения-объявления
