--- a/main/.env
+++ b/main/.env
@@ -4,4 +4,4 @@ TG_BOT_TOKEN= # Токен бота Telegram
 TG_CHAT_ID= # ID чатов Telegram, куда отправляются сообщения бота (пересылка). Для отправки в лс - указать свой ID
 TG_ADMIN_ID= # ID админа, дает доступ к большему кол-ву команд
 TG_TARGET_CHAT_IDS= # ID атов, в какие отправлять сообщения-объявления
-PERSONAL_CHATS_PATH= # Путь создания personal_chats.json (устанавливать ваш путь, но в папку config, например "D:\EchoBotMaxToTg\confi"
+PERSONAL_CHATS_PATH= # Путь создания personal_chats.json (устанавливать ваш путь, но в папку config, например "D:\EchoBotMaxToTg\config"
