[+] Added flexible customization of tasks. [+] Added the ability to customize the required modules directly in the Telegram Bot [UPD] Small changes [UPD] The reminder function has been redesigned.

--- a/config/config.json
+++ b/config/config.json
@@ -1,3 +1,9 @@
 {
-    "pin": "False"
+    "pin": "False",
+    "modules": {
+        "resender": true,
+        "scheduler": true
+    },
+    "tasks": {},
+    "scheduled_tasks": []
 }
